# cfworker-forms

./: Cargo.toml  Makefile.toml  default.nix  flake.nix  rust-toolchain.toml  workerd.nix  wrangler.toml
.github/workflows/: checks.yml  deploy.yml  pr-preview.yml  quality-gate.yml
backend/: Cargo.toml  Makefile.toml  wrangler.toml
backend/src/: lib.rs
crates/backend/: .gitignore  Cargo.toml  wrangler.toml
crates/backend/src/: admins.rs  answer.rs  auth.rs  form.rs  lib.rs  question.rs  session.rs  shared.rs
crates/backend/src/auth/: github.rs  shared.rs
crates/models/: Cargo.toml
crates/models/src/: answer.rs  external.rs  form.rs  lib.rs  macros.rs  question.rs  session.rs  shared.rs
crates/shared/: Cargo.toml
crates/shared/src/: db.rs  lib.rs
frontend/: Makefile.toml  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json  wrangler.toml
frontend/src/: app.d.ts  app.html
frontend/src/lib/form/: FormField.svelte
frontend/src/lib/form/models/: Answer.d.ts  Form.d.ts  Step.d.ts
frontend/src/lib/form/presentation/: FormStep.svelte
frontend/src/lib/form/presentation/steps/: FormStepOptions.svelte  FormStepOptionsMultiple.svelte  FormStepQuestionText.svelte  FormStepText.svelte
frontend/src/lib/models/: api.d.ts
frontend/src/lib/presentation/: Button.svelte  ButtonLink.svelte  Footer.svelte  Header.svelte  Layout.svelte  TopTitle.svelte
frontend/src/lib/presentation/transitions/: slide.ts
frontend/src/lib/service/: device_id.ts  session.ts
frontend/src/routes/: +page.server.ts  +page.svelte
frontend/src/routes/form/[slug]/: +error.svelte  +page.server.ts  +page.svelte  FormPage.svelte  IntroFormPage.svelte  Login.svelte
frontend/src/routes/login/: +server.ts
frontend/static/: fonts.css  variables.css
migrations/: 0001_init.sql  0002_session_device_id.sql  0003_session_last_answer.sql  0004_session_steps.sql  0005_forms_description.sql
nix/: wrangler.nix
nix/zellij/: layout.kdl
