[workspace]
members = [ "backend" ]

[workspace.package]
name = "forms"
version = "0.1.0"
edition = "2021"
description = "RustLangES Forms system"
repository = "https://github.com/RustLangES/cfworker-forms"

[workspace.dependencies]
worker = { version = "0.3", features = ["d1"] }
serde = { version = "1", features = ["serde_derive"] }
