[workspace]
members = [ "crates/backend", "crates/models" ]
resolver = "1"

[workspace.package]
version = "0.1.0"
edition = "2021"
description = "RustLangES Forms system"
repository = "https://github.com/RustLangES/cfworker-forms"

[workspace.dependencies]
oauth2 = { git = "https://github.com/ramosbugs/oauth2-rs", default-features = false}

serde = { version = "1", features = ["serde_derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.121"

time = { version = "0.3.36", features = ["serde", "wasm-bindgen"] }
uuid = { version = "1.10.0", default-features = false, features = ["v4", "v8", "js"] }
worker = { version = "0.3", features = ["d1", "http"] }

