[package]
name = "forms-backend"
version = "0.1.0"
edition.workspace = true
description.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde.workspace = true
worker.workspace = true

# Remove commentary if you need
# serde_json = "1"
# time = { version = "0.3.34", features = ["wasm-bindgen"] }
# serde = { version = "1", features = ["serde_derive"] }
# reqwest = { version = "0.12", default-features = false, features = ["json"] }

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1
