[package]
name = "forms-backend"
version = "0.1.0"
edition.workspace = true
description.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
forms-models = { path = "../models/" }
forms-shared = { path = "../shared/" }

oauth2.workspace = true
futures-core = "0.3.30"

serde.workspace = true
serde-wasm-bindgen.workspace = true
serde_json.workspace = true

time.workspace = true
uuid.workspace = true
wasm-streams = "0.4.0"
worker.workspace = true
form_urlencoded = "1.2.1"
base64 = "0.22.1"

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1
